{
  "version": 4,
  "terraform_version": "1.15.5",
  "serial": 201,
  "lineage": "437dfe62-3f24-02a3-004e-48381eb5e4fe",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "wordpress_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:988477084469:internet-gateway/igw-0529c8b9139c51432",
            "id": "igw-0529c8b9139c51432",
            "owner_id": "988477084469",
            "region": "us-east-1",
            "tags": {
              "Name": "wordpress-internet-gateway"
            },
            "tags_all": {
              "Name": "wordpress-internet-gateway"
            },
            "vpc_id": "vpc-031fbcfdb6a3e7455"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "988477084469",
            "id": "igw-0529c8b9139c51432",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.wordpress_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "wordpress_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:988477084469:loadbalancer/app/wordpress-alb/2caa3e2c234d6047",
            "arn_suffix": "app/wordpress-alb/2caa3e2c234d6047",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "wordpress-alb-1566084762.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:988477084469:loadbalancer/app/wordpress-alb/2caa3e2c234d6047",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "wordpress-alb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-00856cfd1f831b2fa"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-07a674534c2951fb4"
              },
              {
                "subnet_id": "subnet-0801c8b15696c40ba"
              }
            ],
            "subnets": [
              "subnet-07a674534c2951fb4",
              "subnet-0801c8b15696c40ba"
            ],
            "tags": {
              "ManagedBy": "terraform",
              "Name": "wordpress-alb",
              "Project": "wordpress-ha"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "wordpress-alb",
              "Project": "wordpress-ha"
            },
            "vpc_id": "vpc-031fbcfdb6a3e7455",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:988477084469:loadbalancer/app/wordpress-alb/2caa3e2c234d6047"
          },
          "dependencies": [
            "aws_security_group.Alb_sg",
            "aws_subnet.wordpress_web_public_subnet_1",
            "aws_subnet.wordpress_web_public_subnet_2",
            "aws_vpc.wordpress_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "wordpress_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:988477084469:listener/app/wordpress-alb/2caa3e2c234d6047/5f3cea49cde0d5fc",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:988477084469:targetgroup/wordpress-target-group/887c251033324838",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:988477084469:listener/app/wordpress-alb/2caa3e2c234d6047/5f3cea49cde0d5fc",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:988477084469:loadbalancer/app/wordpress-alb/2caa3e2c234d6047",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:988477084469:listener/app/wordpress-alb/2caa3e2c234d6047/5f3cea49cde0d5fc"
          },
          "dependencies": [
            "aws_lb.wordpress_alb",
            "aws_lb_target_group.wordpress_target_group",
            "aws_security_group.Alb_sg",
            "aws_subnet.wordpress_web_public_subnet_1",
            "aws_subnet.wordpress_web_public_subnet_2",
            "aws_vpc.wordpress_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "wordpress_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:988477084469:targetgroup/wordpress-target-group/887c251033324838",
            "arn_suffix": "targetgroup/wordpress-target-group/887c251033324838",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:988477084469:targetgroup/wordpress-target-group/887c251033324838",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "wordpress-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "ManagedBy": "terraform",
              "Name": "wordpress-target-group",
              "Project": "wordpress-ha"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "wordpress-target-group",
              "Project": "wordpress-ha"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-031fbcfdb6a3e7455"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:988477084469:targetgroup/wordpress-target-group/887c251033324838"
          },
          "dependencies": [
            "aws_vpc.wordpress_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "wordpress_private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:988477084469:route-table/rtb-0ef8f3262050d7dac",
            "id": "rtb-0ef8f3262050d7dac",
            "owner_id": "988477084469",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "wordpress-private-route-table"
            },
            "tags_all": {
              "Name": "wordpress-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-031fbcfdb6a3e7455"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "988477084469",
            "id": "rtb-0ef8f3262050d7dac",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.wordpress_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "wordpress_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:988477084469:route-table/rtb-05af9fb45a2358589",
            "id": "rtb-05af9fb45a2358589",
            "owner_id": "988477084469",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0529c8b9139c51432",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "wordpress-route-table"
            },
            "tags_all": {
              "Name": "wordpress-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-031fbcfdb6a3e7455"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "988477084469",
            "id": "rtb-05af9fb45a2358589",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.wordpress_internet_gateway",
            "aws_vpc.wordpress_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "wordpress_private_route_table_association_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-019d42fbeb3c930ac",
            "region": "us-east-1",
            "route_table_id": "rtb-0ef8f3262050d7dac",
            "subnet_id": "subnet-063349e8469d05ff1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "988477084469",
            "id": "rtbassoc-019d42fbeb3c930ac",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_route_table.wordpress_private_route_table",
            "aws_subnet.wordpress_app_private_subnet_1",
            "aws_vpc.wordpress_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "wordpress_private_route_table_association_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0546ddf3c222ec15f",
            "region": "us-east-1",
            "route_table_id": "rtb-0ef8f3262050d7dac",
            "subnet_id": "subnet-079d01864a400774a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "988477084469",
            "id": "rtbassoc-0546ddf3c222ec15f",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_route_table.wordpress_private_route_table",
            "aws_subnet.wordpress_app_private_subnet_2",
            "aws_vpc.wordpress_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "wordpress_private_route_table_association_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06476107365010001",
            "region": "us-east-1",
            "route_table_id": "rtb-0ef8f3262050d7dac",
            "subnet_id": "subnet-03758b89fd889f60b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "988477084469",
            "id": "rtbassoc-06476107365010001",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_route_table.wordpress_private_route_table",
            "aws_subnet.wordpress_DB_private_subnet_1",
            "aws_vpc.wordpress_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "wordpress_private_route_table_association_4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b86272caaf42db1a",
            "region": "us-east-1",
            "route_table_id": "rtb-0ef8f3262050d7dac",
            "subnet_id": "subnet-0a78128bc7a0d83d1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "988477084469",
            "id": "rtbassoc-0b86272caaf42db1a",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_route_table.wordpress_private_route_table",
            "aws_subnet.wordpress_DB_private_subnet_2",
            "aws_vpc.wordpress_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "wordpress_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-003a90c43bf5c8468",
            "region": "us-east-1",
            "route_table_id": "rtb-05af9fb45a2358589",
            "subnet_id": "subnet-0801c8b15696c40ba"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "988477084469",
            "id": "rtbassoc-003a90c43bf5c8468",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.wordpress_internet_gateway",
            "aws_route_table.wordpress_route_table",
            "aws_subnet.wordpress_web_public_subnet_1",
            "aws_vpc.wordpress_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "wordpress_route_table_association_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-004ecc02bbbccb338",
            "region": "us-east-1",
            "route_table_id": "rtb-05af9fb45a2358589",
            "subnet_id": "subnet-07a674534c2951fb4"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "988477084469",
            "id": "rtbassoc-004ecc02bbbccb338",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.wordpress_internet_gateway",
            "aws_route_table.wordpress_route_table",
            "aws_subnet.wordpress_web_public_subnet_2",
            "aws_vpc.wordpress_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:988477084469:security-group/sg-00856cfd1f831b2fa",
            "description": "security group for ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00856cfd1f831b2fa",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "wordpress-alb-sg",
            "name_prefix": "",
            "owner_id": "988477084469",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Alb_sg"
            },
            "tags_all": {
              "Name": "Alb_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-031fbcfdb6a3e7455"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "988477084469",
            "id": "sg-00856cfd1f831b2fa",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.wordpress_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "EC2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:988477084469:security-group/sg-09b07187b0adeae04",
            "description": "security group for EC2 instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09b07187b0adeae04",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00856cfd1f831b2fa"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "wordpress-ec2-sg",
            "name_prefix": "",
            "owner_id": "988477084469",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "EC2_sg"
            },
            "tags_all": {
              "Name": "EC2_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-031fbcfdb6a3e7455"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "988477084469",
            "id": "sg-09b07187b0adeae04",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.Alb_sg",
            "aws_vpc.wordpress_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "RDS_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:988477084469:security-group/sg-00086f3197acd41fb",
            "description": "security group for RDS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00086f3197acd41fb",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09b07187b0adeae04"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "wordpress-rds-sg",
            "name_prefix": "",
            "owner_id": "988477084469",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "RDS_sg"
            },
            "tags_all": {
              "Name": "RDS_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-031fbcfdb6a3e7455"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "988477084469",
            "id": "sg-00086f3197acd41fb",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.Alb_sg",
            "aws_security_group.EC2_sg",
            "aws_vpc.wordpress_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "wordpress_DB_private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:988477084469:subnet/subnet-03758b89fd889f60b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03758b89fd889f60b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "988477084469",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "wordpress-db-private-subnet-1"
            },
            "tags_all": {
              "Name": "wordpress-db-private-subnet-1"
            },
            "vpc_id": "vpc-031fbcfdb6a3e7455"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "988477084469",
            "id": "subnet-03758b89fd889f60b",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.wordpress_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "wordpress_DB_private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:988477084469:subnet/subnet-0a78128bc7a0d83d1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a78128bc7a0d83d1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "988477084469",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "wordpress-db-private-subnet-2"
            },
            "tags_all": {
              "Name": "wordpress-db-private-subnet-2"
            },
            "vpc_id": "vpc-031fbcfdb6a3e7455"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "988477084469",
            "id": "subnet-0a78128bc7a0d83d1",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.wordpress_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "wordpress_app_private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:988477084469:subnet/subnet-063349e8469d05ff1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-063349e8469d05ff1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "988477084469",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "wordpress-app-private-subnet-1"
            },
            "tags_all": {
              "Name": "wordpress-app-private-subnet-1"
            },
            "vpc_id": "vpc-031fbcfdb6a3e7455"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "988477084469",
            "id": "subnet-063349e8469d05ff1",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.wordpress_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "wordpress_app_private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:988477084469:subnet/subnet-079d01864a400774a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-079d01864a400774a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "988477084469",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "wordpress-app-private-subnet-2 "
            },
            "tags_all": {
              "Name": "wordpress-app-private-subnet-2 "
            },
            "vpc_id": "vpc-031fbcfdb6a3e7455"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "988477084469",
            "id": "subnet-079d01864a400774a",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.wordpress_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "wordpress_web_public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:988477084469:subnet/subnet-0801c8b15696c40ba",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0801c8b15696c40ba",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "988477084469",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "wordpress-web-public-subnet-1"
            },
            "tags_all": {
              "Name": "wordpress-web-public-subnet-1"
            },
            "vpc_id": "vpc-031fbcfdb6a3e7455"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "988477084469",
            "id": "subnet-0801c8b15696c40ba",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.wordpress_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "wordpress_web_public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:988477084469:subnet/subnet-07a674534c2951fb4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07a674534c2951fb4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "988477084469",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "wordpress-web-public-subnet-2"
            },
            "tags_all": {
              "Name": "wordpress-web-public-subnet-2"
            },
            "vpc_id": "vpc-031fbcfdb6a3e7455"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "988477084469",
            "id": "subnet-07a674534c2951fb4",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.wordpress_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "wordpress_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:988477084469:vpc/vpc-031fbcfdb6a3e7455",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0576a8c48ef5961aa",
            "default_route_table_id": "rtb-0173e987fb89436ab",
            "default_security_group_id": "sg-0332c0329d0346317",
            "dhcp_options_id": "dopt-0aa3988a6de885267",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-031fbcfdb6a3e7455",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0173e987fb89436ab",
            "owner_id": "988477084469",
            "region": "us-east-1",
            "tags": {
              "Name": "wordpress-vpc"
            },
            "tags_all": {
              "Name": "wordpress-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "988477084469",
            "id": "vpc-031fbcfdb6a3e7455",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}